# multibagger-stock-screener

./: .gitignore  README.md  pyproject.toml
backend/: main.py
backend/models/: factors.py  stock.py
backend/services/: data_fetcher.py  quality_filters.py  scoring_engine.py  stock_universe.py
backend/utils/: constants.py  helpers.py
frontend/: index.html  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: FactorBreakdown.jsx  FilterPanel.jsx  Header.jsx  MacroIndicator.jsx  ModeToggle.jsx  QualityBadges.jsx  ScoreGauge.jsx  ScreenerDashboard.jsx  StockCard.jsx  StockDetail.jsx
